--- a/templates/style.html
+++ b/templates/style.html
@@ -5,6 +5,7 @@
         --background-primary-color: #f8f9fa;
         --background-secondary-color: #cbcbcb;
         --text-color: #333;
+        --disabled-color: #6c757d;
     }
 
     @media (prefers-color-scheme: dark) {
