--- a/templates/dashboard/ensemble.html
+++ b/templates/dashboard/ensemble.html
@@ -7,6 +7,14 @@
 {% endblock head %}
 {% block content %}
 <h1>{{ name }} - {{ school_state }}</h1>
+{% if addresses %}
+<h2>Addresses</h2>
+<ul>
+{% for address in addresses %}
+<li>{{ address.school_name }}<br>{{ address.address }}, {{ address.city }}, {{ address.state }}<br><a href="tel:{{ address.ensemble_phone | slugify | replace(from='-', to='') }}">{{ address.ensemble_phone }}</a></li>
+{% endfor %}
+</ul>
+{% endif %}
 <h2>Calendars</h2>
 {% for calendar in udb_calendar.calendars %}
 <iframe src="/calendar/{{ calendar.google_id }}" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
